--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Logged out{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
 <div class="container">
