--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -53,19 +53,8 @@ gtag('config', 'UA-112923270-2');
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ml-auto">
 
-
-
-    <li class="nav-item ">
-      <a class="nav-link" href="">HOME <span class="sr-only">(current)</span></a>
-    </li>
-
-
-      <li class="nav-item    ">
-          <a class="nav-link " href=""> EVENT </a></li>
-
-
-<li class="nav-item   "><a class="nav-link " href=""> HOME  </a></li>
-<li class="nav-item   "><a class="nav-link " href=""> EVENT  </a></li>
+<li class="nav-item   "><a class="nav-link " href="{% url 'home' %}"> HOME  </a></li>
+<li class="nav-item   "><a class="nav-link " href="{% url 'event' %}"> EVENT  </a></li>
       <li class="nav-item   "><a class="nav-link " href=""> LOGIN  </a></li>
 
           <li class="nav-item   "><a class="nav-link  " href="sponsor.html"> SPONSOR  </a></li>
