--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -2,14 +2,51 @@
 
 {% block title %}Create an account{% endblock %}
 
+{% block login %}
+
+<nav class="navbar navbar-expand-md bg-dark  navbar-dark fixed-top ">
+<a class="navbar-brand mr-auto " href="index.html" style="margin-left: 20px;" ><img src="images/logo.png" width="50" height="40px;"></a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"  >
+  <span class="navbar-toggler-icon  "></span>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav ml-auto">
+<li class="nav-item   "><a class="nav-link " href="{% url 'home' %}"> HOME  </a></li>
+<li class="nav-item   "><a class="nav-link " href="{% url 'event' %}"> EVENT  </a></li>
+<li class="nav-item   "><a class="nav-link " href=""> LOGIN  </a></li>
+
+          <li class="nav-item   "><a class="nav-link  " href="sponsor.html"> SPONSOR  </a></li>
+
+          <li class="nav-item   "><a class="nav-link  " href="gallery.html"> GALLERY </a></li>
+  </ul>
+
+</div>
+</nav>
+
+{% endblock %}
+
 {% block content %}
 <div class="container">
-  <h1>Create an account</h1>
-  <p>Please, sign up using the following form:</p>
-  <form action="." method="post">
-    {{ user_form.as_p }}
+  <h2>Sign up</h2>
+  <div class="panel-group">
+  <form method="post">
     {% csrf_token %}
-    <p><input type="submit" value="Create my account"></p>
+    {% for field in form %}
+    <div class="panel panel-default">
+        <div class="panel-heading">{{ field.label_tag }}</div>
+    </div>
+        {{ field }}
+        {% if field.help_text %}
+          <small style="color: grey">{{ field.help_text }}</small>
+        {% endif %}
+        {% for error in field.errors %}
+          <p style="color: red">{{ error }}</p>
+        {% endfor %}
+    {% endfor %}
+    <br><br>
+    <button type="submit">Sign up</button>
   </form>
-</div>
+  </div>
+  </div>
 {% endblock %}
