--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -52,7 +52,7 @@ gtag('config', 'UA-112923270-2');
 
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ml-auto">
-
+<li class="nav-item   "><a class="nav-link " href="{% url 'register' %}"> REGISTER  </a></li>
 <li class="nav-item   "><a class="nav-link " href="{% url 'home' %}"> HOME  </a></li>
 <li class="nav-item   "><a class="nav-link " href="{% url 'event' %}"> EVENT  </a></li>
       <li class="nav-item   "><a class="nav-link " href=""> LOGIN  </a></li>
