--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -55,7 +55,7 @@ gtag('config', 'UA-112923270-2');
 <li class="nav-item   "><a class="nav-link " href="{% url 'register' %}"> REGISTER  </a></li>
 <li class="nav-item   "><a class="nav-link " href="{% url 'home' %}"> HOME  </a></li>
 <li class="nav-item   "><a class="nav-link " href="{% url 'event' %}"> EVENT  </a></li>
-      <li class="nav-item   "><a class="nav-link " href=""> LOGIN  </a></li>
+      <li class="nav-item   "><a class="nav-link " href="{% url 'login' %}"> LOGIN  </a></li>
 
           <li class="nav-item   "><a class="nav-link  " href="sponsor.html"> SPONSOR  </a></li>
 
