--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -14,7 +14,7 @@
   <ul class="navbar-nav ml-auto">
 <li class="nav-item   "><a class="nav-link " href="{% url 'home' %}"> HOME  </a></li>
 <li class="nav-item   "><a class="nav-link " href="{% url 'event' %}"> EVENT  </a></li>
-<li class="nav-item   "><a class="nav-link " href=""> LOGIN  </a></li>
+<li class="nav-item   "><a class="nav-link " href="{% url 'login' %}"> LOGIN  </a></li>
 
           <li class="nav-item   "><a class="nav-link  " href="sponsor.html"> SPONSOR  </a></li>
 
