--- a/account/templates/account/event.html
+++ b/account/templates/account/event.html
@@ -55,7 +55,7 @@
       <!--
         <li class="nav-item  active ">
             <a class="nav-link " href="event.html"> EVENT </a></li>-->
-        <li class="nav-item   "><a class="nav-link " href=""> LOGIN  </a></li>
+        <li class="nav-item   "><a class="nav-link " href="{% url 'login' %}"> LOGIN  </a></li>
 
             <li class="nav-item   "><a class="nav-link  " href="sponsor.html"> SPONSOR  </a></li>
 
