--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -3,7 +3,8 @@
 {% block title %}Log-in{% endblock %}
 
 {% block content %}
-<div class="container">
+
+<div class="container border border-primary text-center">
   <h2>Login</h2>
   <div class="panel-group">
       <form method="post">
