event-type, event, event-choices, participation models added

--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container border border-primary text-center">
   <h2>Sign up</h2>
   <div class="panel-group">
   <form method="post">
@@ -38,6 +38,7 @@
     </div>
         {{ field }}
         {% if field.help_text %}
+          <br>
           <small style="color: grey">{{ field.help_text }}</small>
         {% endif %}
         {% for error in field.errors %}
