--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="container border border-primary text-center">
+<div class="container border border-primary text-center rounded">
   <h2>Login</h2>
   <div class="panel-group">
       <form method="post">
@@ -22,7 +22,7 @@
             {% endfor %}
         {% endfor %}
         <br><br>
-        <button type="submit">Sign up</button>
+        <button type="submit" class="btn btn-outline-primary">Sign up</button>
 
       </form>
 
