--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -22,9 +22,8 @@
             {% endfor %}
         {% endfor %}
         <br><br>
-        <button type="submit" class="btn btn-outline-primary">Sign up</button>
-
+        <button type="submit" class="btn btn-outline-primary">Log in</button>
       </form>
-
+      <br>
   </div>
 {% endblock %}
