--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -29,13 +29,10 @@
 {% block content %}
 <div class="container border border-primary text-center">
   <h2>Sign up</h2>
-  <div class="panel-group">
   <form method="post">
     {% csrf_token %}
     {% for field in form %}
-    <div class="panel panel-default">
-        <div class="panel-heading">{{ field.label_tag }}</div>
-    </div>
+    <div class="panel-heading">{{ field.label_tag }}</div>
         {{ field }}
         {% if field.help_text %}
           <br>
@@ -46,8 +43,7 @@
         {% endfor %}
     {% endfor %}
     <br><br>
-    <button type="submit">Sign up</button>
+    <button type="submit" class="btn btn-outline-primary">Sign up</button>
   </form>
-  </div>
   </div>
 {% endblock %}
