Errors taken care of like errors in registration,editing

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -59,6 +59,11 @@
   </tr>
 
   <tr>
+  <th>Year:</th>
+  <td>{{ year }}</th>
+  </tr>
+
+  <tr>
   <th>College:</th>
   <td>{{ college }}</th>
   </tr>
